kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-demo
  name: kube-demo
  namespace: demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: kube-demo
  type: NodePort
